@@ -110,7 +110,7 @@ IncludeVerInfo=1
 AutoIncBuild=0
 MajorVer=1
 MinorVer=1
-Release=7
+Release=8
 Build=292
 Debug=0
 PreRelease=0
@@ -122,7 +122,7 @@ CodePage=1252
 [Version Info Keys]
 CompanyName=
 FileDescription=xxm Http Service (AutoUpdate)
-FileVersion=1.1.7.292
+FileVersion=1.1.8.292
 InternalName=
 LegalCopyright=
 LegalTrademarks=
